图论基础：稀疏/稠密图，连通分量，寻路算法，读取文件，DFS,BFS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Algorithm-Practice-Demo)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp DenseGraph.h SparseGraph.h ReadGraph.h Component.h Path.h ShortestPath.h)
 add_executable(Algorithm-Practice-Demo ${SOURCE_FILES})
