--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Algorithm-Practice-Demo)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp DenseGraph.h SparseGraph.h ReadGraph.h Component.h Path.h ShortestPath.h)
+set(SOURCE_FILES main.cpp DenseGraph.h SparseGraph.h ReadGraph.h Edge.h)
 add_executable(Algorithm-Practice-Demo ${SOURCE_FILES})
